Fixes #845 and another bug caught while testing (where the shift left/right animation would play during list edit animations). This removes the CSS animation stuff in favor of simpler, more effective and less buggy CSS transitions, and adds the right -webkit-transform styles

--- a/src/less/animation-library.less
+++ b/src/less/animation-library.less
@@ -73,8 +73,3 @@
 @-webkit-keyframes -webkit-WinJS-enterPage-rtl            { from { -webkit-transform: translateX(-100px); } to { -webkit-transform: none; } }
 
 @-webkit-keyframes -webkit-WinJS-updateBadge              { from { -webkit-transform: translateY(24px); } to { -webkit-transform: none; } }
-
-@-webkit-keyframes WinJS-selectionMode-shiftRight         { from { -webkit-transform: none; } to { -webkit-transform: translateX(40px); } }
-@-webkit-keyframes WinJS-selectionMode-shiftRight-rtl     { from { -webkit-transform: none; } to { -webkit-transform: translateX(-40px); } }
-@-webkit-keyframes WinJS-selectionMode-shiftLeft          { from { -webkit-transform: translateX(40px); } to { -webkit-transform: none; } }
-@-webkit-keyframes WinJS-selectionMode-shiftLeft-rtl      { from { -webkit-transform: translateX(40px); } to { -webkit-transform: none; } }
